--- a/sdtime-web/Web.Release.config
+++ b/sdtime-web/Web.Release.config
@@ -7,10 +7,10 @@
     <service >
       <audienceUris >
         
-        <add value="http://isupport.apphb.com/" xdt:Transform="Replace"/>
+        <add value="http://sdsupport.apphb.com/" xdt:Transform="Replace"/>
       </audienceUris>
       <federatedAuthentication>
-        <wsFederation passiveRedirectEnabled="true" issuer="https://transparent.accesscontrol.windows.net/v2/wsfederation" realm="http://isupport.apphb.com" requireHttps="false" xdt:Transform="Replace" />
+        <wsFederation passiveRedirectEnabled="true" issuer="https://transparent.accesscontrol.windows.net/v2/wsfederation" realm="http://sdsupport.apphb.com" requireHttps="false" xdt:Transform="Replace" />
       </federatedAuthentication>      
     </service>
   </microsoft.identityModel>
