--- a/sdtime-web/Web.config
+++ b/sdtime-web/Web.config
@@ -15,11 +15,9 @@
     <add key="FederationMetadataLocation" value="https://transparent.accesscontrol.windows.net/FederationMetadata/2007-06/FederationMetadata.xml" />
   </appSettings>
   <connectionStrings>
-    <add name="SupportEntities" connectionString="metadata=res://*/Util.Security.Model.UserDb.csdl|res://*/Util.Security.Model.UserDb.ssdl|res://*/Util.Security.Model.UserDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tcp:s569z1ozir.database.windows.net,1433;initial catalog=Support;persist security info=True;user id=support_user@s569z1ozir;password=pass@word1;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="ContainerDb" connectionString="metadata=res://*/Util.Security.Model.UserDb.csdl|res://*/Util.Security.Model.UserDb.ssdl|res://*/Util.Security.Model.UserDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tcp:s569z1ozir.database.windows.net,1433;initial catalog=Support;persist security info=True;user id=support_user@s569z1ozir;password=pass@word1;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="SupportModelStoreContainer" connectionString="metadata=res://*/Util.Security.Model.UserDb.csdl|res://*/Util.Security.Model.UserDb.ssdl|res://*/Util.Security.Model.UserDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tcp:s569z1ozir.database.windows.net,1433;initial catalog=Support;persist security info=True;user id=support_user@s569z1ozir;password=pass@word1;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="UserDbContainer" connectionString="metadata=res://*/Util.Security.Model.UserDb.csdl|res://*/Util.Security.Model.UserDb.ssdl|res://*/Util.Security.Model.UserDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tcp:s569z1ozir.database.windows.net,1433;initial catalog=Support;persist security info=True;user id=support_user@s569z1ozir;password=pass@word1;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="SupportModelStoreContainerDb" connectionString="metadata=res://*/Util.Security.Model.UserDb.csdl|res://*/Util.Security.Model.UserDb.ssdl|res://*/Util.Security.Model.UserDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tcp:s569z1ozir.database.windows.net,1433;initial catalog=Support;persist security info=True;user id=support_user@s569z1ozir;password=pass@word1;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    
+    <add name="SupportModelStoreContainerDb" connectionString="metadata=res://*/Util.Security.Model.UserDb.csdl|res://*/Util.Security.Model.UserDb.ssdl|res://*/Util.Security.Model.UserDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tcp:g5hjtiooag.database.windows.net,1433;initial catalog=sdsupport;persist security info=True;user id=fsadmin@g5hjtiooag;password=s0m3th!ng;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <location path="FederationMetadata">
     <system.web>
       <authorization>
@@ -95,7 +93,7 @@
       </applicationService>
       <issuerNameRegistry type="Microsoft.IdentityModel.Tokens.ConfigurationBasedIssuerNameRegistry, Microsoft.IdentityModel, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35">
         <trustedIssuers>
-          <add thumbprint="DD39ED65C04AAC7EE662A552E04B89963ED8C0C6" name="https://transparent.accesscontrol.windows.net/" />
+          <add thumbprint="97F332170A4EC21E1A4C12E1898A850D20C8887C" name="https://transparent.accesscontrol.windows.net/" />
         </trustedIssuers>
       </issuerNameRegistry>
       <certificateValidation certificateValidationMode="None" />
@@ -129,12 +127,8 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="https://connectwise.somethingdigital.com/v4_6_release/apis/1.5/MemberApi.asmx"
-        binding="basicHttpBinding" bindingConfiguration="MemberApiSoap"
-        contract="Members.MemberApiSoap" name="MemberApiSoap" />
-      <endpoint address="http://isupportsvcs.somethingdigital.com/TicketService.svc"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ITicketService"
-        contract="CWTicketService.ITicketService" name="BasicHttpBinding_ITicketService" />
+      <endpoint address="https://connectwise.somethingdigital.com/v4_6_release/apis/1.5/MemberApi.asmx" binding="basicHttpBinding" bindingConfiguration="MemberApiSoap" contract="Members.MemberApiSoap" name="MemberApiSoap" />
+      <endpoint address="http://isupportsvcs.somethingdigital.com/TicketService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ITicketService" contract="CWTicketService.ITicketService" name="BasicHttpBinding_ITicketService" />
     </client>
   </system.serviceModel>
 </configuration>
