fixed nav, minor bugs, new login page

--- a/sdtime-web/Web.Release.config
+++ b/sdtime-web/Web.Release.config
@@ -10,7 +10,7 @@
         <add value="http://sdsupport.apphb.com/" xdt:Transform="Replace"/>
       </audienceUris>
       <federatedAuthentication>
-        <wsFederation passiveRedirectEnabled="true" issuer="https://transparent.accesscontrol.windows.net/v2/wsfederation" realm="http://sdsupport.apphb.com" requireHttps="false" xdt:Transform="Replace" />
+        <wsFederation passiveRedirectEnabled="true" issuer="http://sdsupport.apphb.com/User/Login" realm="http://sdsupport.apphb.com" requireHttps="false" xdt:Transform="Replace" />
       </federatedAuthentication>      
     </service>
   </microsoft.identityModel>
