--- a/sdtime-web/Web.config
+++ b/sdtime-web/Web.config
@@ -15,10 +15,30 @@
     <add key="FederationMetadataLocation" value="https://transparent.accesscontrol.windows.net/FederationMetadata/2007-06/FederationMetadata.xml" />
   </appSettings>
   <connectionStrings>
-    
     <add name="SupportModelStoreContainerDb" connectionString="metadata=res://*/Util.Security.Model.UserDb.csdl|res://*/Util.Security.Model.UserDb.ssdl|res://*/Util.Security.Model.UserDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tcp:g5hjtiooag.database.windows.net,1433;initial catalog=sdsupport;persist security info=True;user id=fsadmin@g5hjtiooag;password=s0m3th!ng;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <location path="FederationMetadata">
+    <system.web>
+      <authorization>
+        <allow users="*" />
+      </authorization>
+    </system.web>
+  </location>
+  <location path="User/Login">
+    <system.web>
+      <authorization>
+        <allow users="*" />
+      </authorization>
+    </system.web>
+  </location>
+  <location path="Scripts">
+    <system.web>
+      <authorization>
+        <allow users="*" />
+      </authorization>
+    </system.web>
+  </location>
+  <location path="Content">
     <system.web>
       <authorization>
         <allow users="*" />
@@ -79,7 +99,7 @@
         <add value="http://localhost:51529/" />
       </audienceUris>
       <federatedAuthentication>
-        <wsFederation passiveRedirectEnabled="true" issuer="https://transparent.accesscontrol.windows.net/v2/wsfederation" realm="http://localhost:51529/" requireHttps="false" />
+        <wsFederation passiveRedirectEnabled="true" issuer="http://localhost:51529/User/Login" realm="http://localhost:51529/" requireHttps="false" />
         <cookieHandler requireSsl="false" />
       </federatedAuthentication>
       <applicationService>
