changes to services to support multiple boards

--- a/SD.CWServices/SD.CWServices.csproj
+++ b/SD.CWServices/SD.CWServices.csproj
@@ -81,6 +81,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CWServiceBoards.cs" />
     <Compile Include="Model\ConnectwiseModel.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
