--- a/SD.CWServices/Web.config
+++ b/SD.CWServices/Web.config
@@ -8,6 +8,14 @@
     </compilation>
   </system.web>
   <system.serviceModel>
+    <services>
+      <service name="Microsoft.ServiceBus.Samples.PingService">
+        <endpoint name="TicketService"
+                  contract="SD.CWServices.ITicketService"
+                  binding="netTcpRelayBinding"/>
+        
+      </service>
+    </services>
     <behaviors>
       <serviceBehaviors>
         <behavior>
@@ -22,6 +30,7 @@
     <extensions>
       <!-- In this extension section we are introducing all known service bus extensions. User can remove the ones they don't need. -->
       <behaviorExtensions>
+        
         <add name="connectionStatusBehavior" type="Microsoft.ServiceBus.Configuration.ConnectionStatusElement, Microsoft.ServiceBus, Version=1.8.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
         <add name="transportClientEndpointBehavior" type="Microsoft.ServiceBus.Configuration.TransportClientEndpointBehaviorElement, Microsoft.ServiceBus, Version=1.8.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
         <add name="serviceRegistrySettings" type="Microsoft.ServiceBus.Configuration.ServiceRegistrySettingsElement, Microsoft.ServiceBus, Version=1.8.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
@@ -52,6 +61,20 @@
   </connectionStrings>
   <appSettings>
     <!-- Service Bus specific app setings for messaging connections -->
-    <add key="Microsoft.ServiceBus.ConnectionString" value="Endpoint=sb://[your namespace].servicebus.windows.net;SharedSecretIssuer=owner;SharedSecretValue=[your secret]" />
+    <add key="ServicePath" value="cw/tickets"/>
+    <add key="ServiceNamespace" value="sdsupport"/>
+    <add key="IssuerName" value="sd-svc"/>
+    <add key="IssuerSecret" value="mT+GEEUFD0TfZVUB6Xvjrn4cHWfe18u2PY77/RUiUzs="/>
   </appSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.ServiceBus"
+                          publicKeyToken="31bf3856ad364e35"
+                          culture="neutral" />
+        <bindingRedirect oldVersion="1.0.0.0"
+                         newVersion="1.8.0.0"/>
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
