--- a/sdtime-web/packages.config
+++ b/sdtime-web/packages.config
@@ -9,7 +9,9 @@
   <package id="jQuery.vsdoc" version="1.5.1" targetFramework="net40" />
   <package id="Knockback.js" version="0.16.7" targetFramework="net40" />
   <package id="knockoutjs" version="2.1.0" targetFramework="net40" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="2.0.1.0" targetFramework="net40" />
   <package id="Modernizr" version="2.6.2" targetFramework="net40" />
   <package id="underscore.js" version="1.3.3" targetFramework="net40" />
   <package id="Unity" version="2.1.505.2" targetFramework="net40" />
+  <package id="WindowsAzure.ServiceBus" version="2.1.2.0" targetFramework="net40" />
 </packages>
