finalize connectivity with Azure Service Bus

--- a/sdtime-web/Web.config
+++ b/sdtime-web/Web.config
@@ -14,7 +14,11 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="FederationMetadataLocation" value="https://transparent.accesscontrol.windows.net/FederationMetadata/2007-06/FederationMetadata.xml" />
-    <add key="Microsoft.ServiceBus.ConnectionString" value="Endpoint=sb://[your namespace].servicebus.windows.net;SharedSecretIssuer=owner;SharedSecretValue=[your secret]" />
+    
+    <add key="ServicePath" value="cw/tickets" />
+    <add key="ServiceNamespace" value="sdsupport" />
+    <add key="IssuerName" value="sd-svc" />
+    <add key="IssuerSecret" value="mT+GEEUFD0TfZVUB6Xvjrn4cHWfe18u2PY77/RUiUzs=" />
   </appSettings>
   <connectionStrings>
     <add name="SupportModelStoreContainerDb" connectionString="metadata=res://*/Util.Security.Model.UserDb.csdl|res://*/Util.Security.Model.UserDb.ssdl|res://*/Util.Security.Model.UserDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tcp:g5hjtiooag.database.windows.net,1433;initial catalog=sdsupport;persist security info=True;user id=fsadmin@g5hjtiooag;password=s0m3th!ng;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
@@ -139,18 +143,23 @@
     </container>
   </unity>
   <system.serviceModel>
+    
     <bindings>
       <basicHttpBinding>
         <binding name="MemberApiSoap">
           <security mode="Transport" />
         </binding>
         <binding name="MemberApiSoap1" />
-        <binding name="BasicHttpBinding_ITicketService" />
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="https://connectwise.somethingdigital.com/v4_6_release/apis/1.5/MemberApi.asmx" binding="basicHttpBinding" bindingConfiguration="MemberApiSoap" contract="Members.MemberApiSoap" name="MemberApiSoap" />
-      <endpoint address="http://isupportsvcs.somethingdigital.com/TicketService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ITicketService" contract="CWTicketService.ITicketService" name="BasicHttpBinding_ITicketService" />
+      <endpoint address="https://connectwise.somethingdigital.com/v4_6_release/apis/1.5/MemberApi.asmx"
+        binding="basicHttpBinding" bindingConfiguration="MemberApiSoap"
+        contract="Members.MemberApiSoap" name="MemberApiSoap" />
+      
+      <endpoint name="TicketService"
+                contract="SD.CWServices.ITicketService"
+                binding="netTcpRelayBinding"/>
     </client>
     <extensions>
       <!-- In this extension section we are introducing all known service bus extensions. User can remove the ones they don't need. -->
