--- a/sdtime-web/sdtime-web.csproj
+++ b/sdtime-web/sdtime-web.csproj
@@ -85,6 +85,9 @@
     <Reference Include="Microsoft.WindowsAzure.Configuration">
       <HintPath>..\packages\Microsoft.WindowsAzure.ConfigurationManager.2.0.1.0\lib\net40\Microsoft.WindowsAzure.Configuration.dll</HintPath>
     </Reference>
+    <Reference Include="SD.CWServices">
+      <HintPath>..\SD.CWServices\bin\SD.CWServices.dll</HintPath>
+    </Reference>
     <Reference Include="System.Data.Entity" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
@@ -135,12 +138,8 @@
     <Compile Include="Models\Support\SupportResponse.cs" />
     <Compile Include="Models\Support\Ticket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service References\CWTicketService\Reference.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </Compile>
     <Compile Include="Util\CWServiceBoards.cs" />
+    <Compile Include="Util\Internal\ServiceBusHelper.cs" />
     <Compile Include="Util\Security\ClaimCollectionExtensions.cs" />
     <Compile Include="Util\Security\ClaimsContants.cs" />
     <Compile Include="Util\Security\ClaimsInfo.cs" />
@@ -256,37 +255,11 @@
     <Content Include="Scripts\support\viewModel\viewModelSupport.js" />
     <Content Include="Scripts\underscore.js" />
     <Content Include="Scripts\underscore.min.js" />
-    <None Include="Service References\CWTicketService\sdtime.CWTicketService.Status.datasource">
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </None>
-    <None Include="Service References\CWTicketService\sdtime.CWTicketService.Ticket.datasource">
-      <DependentUpon>Reference.svcmap</DependentUpon>
-    </None>
-    <None Include="Service References\CWTicketService\TicketService.disco" />
-    <None Include="Service References\CWTicketService\configuration91.svcinfo" />
-    <None Include="Service References\CWTicketService\configuration.svcinfo" />
-    <None Include="Service References\CWTicketService\Reference.svcmap">
-      <Generator>WCF Proxy Generator</Generator>
-      <LastGenOutput>Reference.cs</LastGenOutput>
-    </None>
     <Content Include="Util\Security\Model\UserDb.edmx.sql" />
     <EntityDeploy Include="Models\ConnectWise.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>ConnectWise.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <None Include="Service References\CWTicketService\TicketService.wsdl" />
-    <None Include="Service References\CWTicketService\TicketService.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Service References\CWTicketService\TicketService1.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Service References\CWTicketService\TicketService2.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Service References\CWTicketService\TicketService3.xsd">
-      <SubType>Designer</SubType>
-    </None>
     <None Include="Service References\Members\MemberApi.disco" />
     <None Include="Service References\Members\configuration91.svcinfo" />
     <None Include="Service References\Members\configuration.svcinfo" />
@@ -346,7 +319,6 @@
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
-    <WCFMetadataStorage Include="Service References\CWTicketService\" />
     <WCFMetadataStorage Include="Service References\Members\" />
   </ItemGroup>
   <PropertyGroup>
