updates to services

--- a/SD.CWServices/Web.config
+++ b/SD.CWServices/Web.config
@@ -57,7 +57,8 @@
     <modules runAllManagedModulesForAllRequests="true" />
   </system.webServer>
   <connectionStrings>
-    <add name="ConnectwiseEntities" connectionString="metadata=res://*/Model.ConnectwiseModel.csdl|res://*/Model.ConnectwiseModel.ssdl|res://*/Model.ConnectwiseModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.10.10.204;initial catalog=cwwebapp_sd;persist security info=True;user id=sdreadonly;password=sdreadonly;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ConnectwiseEntities" 
+         connectionString="metadata=res://*/Model.ConnectwiseModel.csdl|res://*/Model.ConnectwiseModel.ssdl|res://*/Model.ConnectwiseModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.10.10.204;initial catalog=cwwebapp_sd;persist security info=True;user id=sdreadonly;password=sdreadonly;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <!-- Service Bus specific app setings for messaging connections -->
